# find-binary-version-rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  README.tpl  flake.nix  shell.nix
.github/: dependabot.yml
.github/workflows/: linux.yml  macos.yml  windows.yml
examples/: find-binary-version.rs
src/: custom.rs  lib.rs  linuxkernel.rs  strings.rs  uboot.rs
tests/fixtures/uboot/: arm-spl  arm-u-boot-dtb.img
