[package]
name = "find-binary-version"
version = "0.3.9"
authors = ["Otavio Salvador <otavio@ossystems.com.br>"]
description = "Identify binary versions easily"
repository = "https://github.com/OSSystems/find-binary-version-rs"
homepage = "https://github.com/OSSystems/find-binary-version-rs"
documentation = "https://docs.rs/find-binary-version"
keywords = ["version", "binary"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "OSSystems/find-binary-version-rs" }

[dependencies]
async-trait = "0.1"
compress-tools = { version = "0.12", features = ["tokio_support"] }
regex = "1"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
anyhow = "1"
structopt = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
